Upd readme (change bit=1 in dataset)

--- a/flow_tester.ipynb
+++ b/flow_tester.ipynb
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "56dafa78",
    "metadata": {},
    "outputs": [],
@@ -757,7 +757,7 @@
     "        frame1 = pred_frames[:, i, ...]\n",
     "        frame2 = gt_frames[:, i+1, ...]\n",
     "        # Compute forward and backward flow using RAFT\n",
-    "        flow_fw, flow_bw = self.raft_model(frame1, frame2, iters=20, test_mode=True)\n",
+    "        flow_fw, flow_bw = raft_model(frame1, frame2, iters=20, test_mode=True)\n",
     "        # Differentiable Warp gt frame (t+1) to pred frame (t)\n",
     "        warp_img2 = differentiable_warp(frame2, flow_fw)\n",
     "        # Differentiable Compute occlusion mask \n",
