Add dynamic PPP calculation

--- a/burst_eval_metrics.ipynb
+++ b/burst_eval_metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "26836d2d",
    "metadata": {},
    "outputs": [],
@@ -31,10 +31,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "38557b73",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "use sdp attention as default\n",
+      "keep default attention mode\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/nobackup/aryan/.conda/envs/sd35/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/nobackup/aryan/.conda/envs/sd35/lib/python3.11/site-packages/gdown/__init__.py:3: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  import pkg_resources\n"
+     ]
+    }
+   ],
    "source": [
     "import gqvr.model.warp_utils as warp_utils\n",
     "from gqvr.model.core_raft.utils.utils import InputPadder\n",
@@ -140,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "8c0ad45a",
    "metadata": {},
    "outputs": [],
@@ -164,14 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "397244ed",
    "metadata": {},
    "outputs": [],
    "source": [
     "SD21_burst_results = \"/nobackup1/aryan/results/sd21_burst\"\n",
     "QUIVER_RESULTS = \"/nobackup1/aryan/results/QUIVER\"\n",
-    "QBP_RESULTS = \"/nobackup1/aryan/results/QBP\"\n",
+    "QBP_RESULTS = \"/nobackup1/aryan/results/QBP_BM3D\"\n",
     "\n",
     "scenes = ['xvfi_boat', 'xvfi_train', \n",
     "          'test_00014', 'test_00020', 'test_00021', 'test_00031',\n",
@@ -606,7 +625,156 @@
    "execution_count": null,
    "id": "ed66a56d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scene: xvfi_train | PSNR: 12.8230 | SSIM: 0.2287 | Warping Error: 0.0003:  18%|█▊        | 2/11 [00:45<03:24, 22.69s/it]\n",
+      "/tmp/ipykernel_1910057/3754814929.py:68: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.detach().clone() or sourceTensor.detach().clone().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  warp_img2 = torch.tensor(warp_img2).float().to(device)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xvfi_boat: 10.9781/0.4913/0.0007\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xvfi_train: 13.0492/0.2487/0.0003\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_00014: 13.2860/0.5317/0.0006\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_00020: 18.6312/0.7070/0.0019\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_00021: 13.3375/0.4337/0.0007\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_00031: 14.0013/0.4696/0.0007\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "small_jetengine: 14.7061/0.1623/0.0002\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "small_tank: 8.8698/0.4778/0.0023\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "small_explosion_0001: 19.7825/0.1607/0.0004\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "small_padlock: 11.2782/0.5458/0.0005\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scene: small_moreguns | PSNR: 9.2624 | SSIM: 0.6958 | Warping Error: 0.0024: 100%|██████████| 11/11 [12:52<00:00, 70.22s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "small_moreguns: 9.2624/0.6958/0.0024\n",
+      "Average PSNR: 13.3802\n",
+      "Average SSIM: 0.4477\n",
+      "Average Warping Error: 0.0010\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "cumulative_psnr = []\n",
     "cumulative_ssim = []\n",
@@ -624,11 +792,11 @@
     "    ssim_list = []\n",
     "    warping_error = compute_video_warping_error(test_dir_out)\n",
     "    for i in range(len(gt_imgs)):\n",
-    "        gt_img = Image.open(os.path.join(test_dir_gt, gt_imgs[i])).convert(\"RGB\").resize((512,512), Image.LANCZOS)\n",
-    "        out_img = Image.open(os.path.join(test_dir_out, out_imgs[i])).convert(\"RGB\").resize((512,512), Image.LANCZOS)\n",
-    "        gt_img = torch.tensor(np.array(gt_img)).permute(2,0,1).float().unsqueeze(0).to(device) / 255.0\n",
-    "        out_img = torch.tensor(np.array(out_img)).permute(2,0,1).float().unsqueeze(0).to(device) / 255.0\n",
-    "        psnr, ssim = compute_full_reference_metrics(gt_img, out_img)\n",
+    "        gt_img = Image.open(os.path.join(test_dir_gt, gt_imgs[i])).convert('L').resize((512,512), Image.LANCZOS)\n",
+    "        out_img = Image.open(os.path.join(test_dir_out, out_imgs[i])).convert('L').resize((512,512), Image.LANCZOS)\n",
+    "        gt_img = torch.tensor(np.array(gt_img)).float().unsqueeze(0).to(device) / 255.0\n",
+    "        out_img = torch.tensor(np.array(out_img)).float().unsqueeze(0).to(device) / 255.0\n",
+    "        psnr, ssim = compute_full_reference_metrics(gt_img.unsqueeze(0), out_img.unsqueeze(0))\n",
     "        # print( psnr, ssim)\n",
     "        psnr_list.append(psnr)\n",
     "        ssim_list.append(ssim)\n",
@@ -636,7 +804,7 @@
     "    print(f\"{scene}: {np.mean(psnr_list):.4f}/{np.mean(ssim_list):.4f}/{warping_error:.4f}\")\n",
     "    cumulative_psnr.append(np.mean(psnr_list))\n",
     "    cumulative_ssim.append(np.mean(ssim_list))\n",
-    "    cumulative_warping_error.append(warping_error)\n",
+    "    cumulative_warping_error.append(warping_error.detach().cpu().item())\n",
     "    pbar.update(1)\n",
     "pbar.close()\n",
     "\n",
@@ -644,6 +812,14 @@
     "print(f\"Average SSIM: {np.mean(cumulative_ssim):.4f}\")\n",
     "print(f\"Average Warping Error: {np.mean(cumulative_warping_error):.4f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b557baa5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
