--- a/burst_eval_metrics.ipynb
+++ b/burst_eval_metrics.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "397244ed",
    "metadata": {},
    "outputs": [],
@@ -819,7 +819,44 @@
    "id": "b557baa5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "SD21_Stage2_results = \"/nobackup1/aryan/results/sd21/burst_testset_evaluation_s2\"\n",
+    "cumulative_psnr = []\n",
+    "cumulative_ssim = []\n",
+    "cumulative_warping_error = []\n",
+    "pbar = tqdm(total=len(scenes))\n",
+    "for scene in scenes:\n",
+    "    test_dir_gt = SD21_burst_results + f\"/{scene}_gt\"\n",
+    "    gt_imgs = os.listdir(test_dir_gt)\n",
+    "    gt_imgs.sort()\n",
+    "    test_dir_out = QBP_RESULTS + f\"/{scene}\"\n",
+    "    out_imgs = os.listdir(test_dir_out)\n",
+    "    out_imgs.sort()\n",
+    "    # test_dir_lq = SD21_burst_results + f\"/{scene}_lq\"\n",
+    "    psnr_list = []\n",
+    "    ssim_list = []\n",
+    "    warping_error = compute_video_warping_error(test_dir_out)\n",
+    "    for i in range(len(gt_imgs)):\n",
+    "        gt_img = Image.open(os.path.join(test_dir_gt, gt_imgs[i])).convert('L').resize((512,512), Image.LANCZOS)\n",
+    "        out_img = Image.open(os.path.join(test_dir_out, out_imgs[i])).convert('L').resize((512,512), Image.LANCZOS)\n",
+    "        gt_img = torch.tensor(np.array(gt_img)).float().unsqueeze(0).to(device) / 255.0\n",
+    "        out_img = torch.tensor(np.array(out_img)).float().unsqueeze(0).to(device) / 255.0\n",
+    "        psnr, ssim = compute_full_reference_metrics(gt_img.unsqueeze(0), out_img.unsqueeze(0))\n",
+    "        # print( psnr, ssim)\n",
+    "        psnr_list.append(psnr)\n",
+    "        ssim_list.append(ssim)\n",
+    "    pbar.set_description(f\"Scene: {scene} | PSNR: {np.mean(psnr_list):.4f} | SSIM: {np.mean(ssim_list):.4f} | Warping Error: {warping_error:.4f}\")\n",
+    "    print(f\"{scene}: {np.mean(psnr_list):.4f}/{np.mean(ssim_list):.4f}/{warping_error:.4f}\")\n",
+    "    cumulative_psnr.append(np.mean(psnr_list))\n",
+    "    cumulative_ssim.append(np.mean(ssim_list))\n",
+    "    cumulative_warping_error.append(warping_error.detach().cpu().item())\n",
+    "    pbar.update(1)\n",
+    "pbar.close()\n",
+    "\n",
+    "print(f\"Average PSNR: {np.mean(cumulative_psnr):.4f}\")\n",
+    "print(f\"Average SSIM: {np.mean(cumulative_ssim):.4f}\")\n",
+    "print(f\"Average Warping Error: {np.mean(cumulative_warping_error):.4f}\")"
+   ]
   }
  ],
  "metadata": {
