upd eval & infer again!

--- a/burst_eval_metrics.ipynb
+++ b/burst_eval_metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "26836d2d",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "38557b73",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8c0ad45a",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "397244ed",
    "metadata": {},
    "outputs": [],
@@ -815,10 +815,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b557baa5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/11 [00:00<?, ?it/s]/nobackup/aryan/.conda/envs/sd35/lib/python3.11/site-packages/torch/functional.py:554: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at /pytorch/aten/src/ATen/native/TensorShape.cpp:4322.)\n",
+      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n",
+      "/tmp/ipykernel_1674845/3754814929.py:68: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.detach().clone() or sourceTensor.detach().clone().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  warp_img2 = torch.tensor(warp_img2).float().to(device)\n",
+      "Scene: xvfi_boat | PSNR: 27.4399 | SSIM: 0.7111 | Warping Error: 0.0018:   9%|▉         | 1/11 [00:07<01:15,  7.52s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xvfi_boat: 27.4399/0.7111/0.0018\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scene: xvfi_train | PSNR: 24.2301 | SSIM: 0.7153 | Warping Error: 0.0036:  18%|█▊        | 2/11 [00:15<01:10,  7.82s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xvfi_train: 24.2301/0.7153/0.0036\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scene: test_00014 | PSNR: 30.1029 | SSIM: 0.8293 | Warping Error: 0.0020:  27%|██▋       | 3/11 [01:06<03:38, 27.29s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_00014: 30.1029/0.8293/0.0020\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scene: test_00020 | PSNR: 32.3760 | SSIM: 0.9463 | Warping Error: 0.0012:  36%|███▋      | 4/11 [01:52<04:05, 35.05s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_00020: 32.3760/0.9463/0.0012\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scene: test_00021 | PSNR: 32.0519 | SSIM: 0.8960 | Warping Error: 0.0012:  45%|████▌     | 5/11 [02:45<04:07, 41.24s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_00021: 32.0519/0.8960/0.0012\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scene: test_00031 | PSNR: 30.0710 | SSIM: 0.8439 | Warping Error: 0.0019:  55%|█████▍    | 6/11 [06:14<08:11, 98.26s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_00031: 30.0710/0.8439/0.0019\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scene: small_jetengine | PSNR: 30.1096 | SSIM: 0.8549 | Warping Error: 0.0029:  64%|██████▎   | 7/11 [06:37<04:55, 73.85s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "small_jetengine: 30.1096/0.8549/0.0029\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scene: small_tank | PSNR: 26.2065 | SSIM: 0.8655 | Warping Error: 0.0030:  73%|███████▎  | 8/11 [06:45<02:38, 52.77s/it]     "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "small_tank: 26.2065/0.8655/0.0030\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scene: small_explosion_0001 | PSNR: 29.1489 | SSIM: 0.8912 | Warping Error: 0.0049:  82%|████████▏ | 9/11 [07:01<01:22, 41.36s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "small_explosion_0001: 29.1489/0.8912/0.0049\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scene: small_padlock | PSNR: 34.8471 | SSIM: 0.9663 | Warping Error: 0.0014:  91%|█████████ | 10/11 [07:09<00:30, 30.92s/it]      "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "small_padlock: 34.8471/0.9663/0.0014\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scene: small_moreguns | PSNR: 31.5905 | SSIM: 0.9074 | Warping Error: 0.0011: 100%|██████████| 11/11 [07:57<00:00, 43.43s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "small_moreguns: 31.5905/0.9074/0.0011\n",
+      "Average PSNR: 29.8340\n",
+      "Average SSIM: 0.8570\n",
+      "Average Warping Error: 0.0023\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "SD21_Stage2_results = \"/nobackup1/aryan/results/sd21/burst_testset_evaluation_s2\"\n",
     "cumulative_psnr = []\n",
@@ -829,7 +998,7 @@
     "    test_dir_gt = SD21_burst_results + f\"/{scene}_gt\"\n",
     "    gt_imgs = os.listdir(test_dir_gt)\n",
     "    gt_imgs.sort()\n",
-    "    test_dir_out = QBP_RESULTS + f\"/{scene}\"\n",
+    "    test_dir_out = SD21_Stage2_results + f\"/{scene}\"\n",
     "    out_imgs = os.listdir(test_dir_out)\n",
     "    out_imgs.sort()\n",
     "    # test_dir_lq = SD21_burst_results + f\"/{scene}_lq\"\n",
@@ -857,6 +1026,227 @@
     "print(f\"Average SSIM: {np.mean(cumulative_ssim):.4f}\")\n",
     "print(f\"Average Warping Error: {np.mean(cumulative_warping_error):.4f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7bef11d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scene: xvfi_train | PSNR: 27.3034 | SSIM: 0.7572 | Warping Error: 0.0032:  18%|█▊        | 2/11 [00:32<02:26, 16.29s/it]\n",
+      "/tmp/ipykernel_1674845/3754814929.py:68: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.detach().clone() or sourceTensor.detach().clone().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  warp_img2 = torch.tensor(warp_img2).float().to(device)\n",
+      "Scene: xvfi_boat | PSNR: 16.9676 | SSIM: 0.7116 | Warping Error: 0.0013:   9%|▉         | 1/11 [00:07<01:11,  7.10s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xvfi_boat: 16.9676/0.7116/0.0013\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scene: xvfi_train | PSNR: 24.0845 | SSIM: 0.7626 | Warping Error: 0.0032:  18%|█▊        | 2/11 [00:14<01:04,  7.13s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xvfi_train: 24.0845/0.7626/0.0032\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scene: test_00014 | PSNR: 22.8988 | SSIM: 0.8112 | Warping Error: 0.0013:  27%|██▋       | 3/11 [00:58<03:14, 24.30s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_00014: 22.8988/0.8112/0.0013\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scene: test_00020 | PSNR: 28.8180 | SSIM: 0.9455 | Warping Error: 0.0010:  36%|███▋      | 4/11 [01:43<03:45, 32.29s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_00020: 28.8180/0.9455/0.0010\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scene: test_00021 | PSNR: 15.2004 | SSIM: 0.6951 | Warping Error: 0.0010:  45%|████▌     | 5/11 [02:28<03:40, 36.79s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_00021: 15.2004/0.6951/0.0010\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scene: test_00031 | PSNR: 23.6604 | SSIM: 0.8440 | Warping Error: 0.0016:  55%|█████▍    | 6/11 [05:32<07:14, 86.96s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_00031: 23.6604/0.8440/0.0016\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scene: small_jetengine | PSNR: 30.9402 | SSIM: 0.8831 | Warping Error: 0.0026:  64%|██████▎   | 7/11 [05:52<04:20, 65.07s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "small_jetengine: 30.9402/0.8831/0.0026\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scene: small_tank | PSNR: 23.4911 | SSIM: 0.8795 | Warping Error: 0.0032:  73%|███████▎  | 8/11 [05:59<02:19, 46.41s/it]     "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "small_tank: 23.4911/0.8795/0.0032\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scene: small_explosion_0001 | PSNR: 29.4817 | SSIM: 0.9326 | Warping Error: 0.0048:  82%|████████▏ | 9/11 [06:12<01:12, 36.22s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "small_explosion_0001: 29.4817/0.9326/0.0048\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scene: small_padlock | PSNR: 35.4416 | SSIM: 0.9707 | Warping Error: 0.0014:  91%|█████████ | 10/11 [06:19<00:27, 27.03s/it]      "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "small_padlock: 35.4416/0.9707/0.0014\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scene: small_moreguns | PSNR: 30.9350 | SSIM: 0.9499 | Warping Error: 0.0013: 100%|██████████| 11/11 [07:00<00:00, 38.26s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "small_moreguns: 30.9350/0.9499/0.0013\n",
+      "Average PSNR: 25.6290\n",
+      "Average SSIM: 0.8532\n",
+      "Average Warping Error: 0.0021\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "SD21_Stage1_results = \"/nobackup1/aryan/results/sd21/burst_testset_evaluation_s1\"\n",
+    "cumulative_psnr = []\n",
+    "cumulative_ssim = []\n",
+    "cumulative_warping_error = []\n",
+    "pbar = tqdm(total=len(scenes))\n",
+    "for scene in scenes:\n",
+    "    test_dir_gt = QUIVER_RESULTS + f\"/{scene}_gt\"\n",
+    "    gt_imgs = os.listdir(test_dir_gt)\n",
+    "    gt_imgs.sort()\n",
+    "    test_dir_out = SD21_Stage1_results + f\"/{scene}\"\n",
+    "    out_imgs = os.listdir(test_dir_out)\n",
+    "    out_imgs.sort()\n",
+    "    # test_dir_lq = SD21_burst_results + f\"/{scene}_lq\"\n",
+    "    psnr_list = []\n",
+    "    ssim_list = []\n",
+    "    warping_error = compute_video_warping_error(test_dir_out)\n",
+    "    for i in range(len(gt_imgs)):\n",
+    "        gt_img = Image.open(os.path.join(test_dir_gt, gt_imgs[i])).convert('L').resize((1024,1024), Image.LANCZOS)\n",
+    "        out_img = Image.open(os.path.join(test_dir_out, out_imgs[i])).convert('L').resize((1024,1024), Image.LANCZOS)\n",
+    "        gt_img = torch.tensor(np.array(gt_img)).float().unsqueeze(0).to(device) / 255.0\n",
+    "        out_img = torch.tensor(np.array(out_img)).float().unsqueeze(0).to(device) / 255.0\n",
+    "        psnr, ssim = compute_full_reference_metrics(gt_img.unsqueeze(0), out_img.unsqueeze(0))\n",
+    "        # print( psnr, ssim)\n",
+    "        psnr_list.append(psnr)\n",
+    "        ssim_list.append(ssim)\n",
+    "    pbar.set_description(f\"Scene: {scene} | PSNR: {np.mean(psnr_list):.4f} | SSIM: {np.mean(ssim_list):.4f} | Warping Error: {warping_error:.4f}\")\n",
+    "    print(f\"{scene}: {np.mean(psnr_list):.4f}/{np.mean(ssim_list):.4f}/{warping_error:.4f}\")\n",
+    "    cumulative_psnr.append(np.mean(psnr_list))\n",
+    "    cumulative_ssim.append(np.mean(ssim_list))\n",
+    "    cumulative_warping_error.append(warping_error.detach().cpu().item())\n",
+    "    pbar.update(1)\n",
+    "pbar.close()\n",
+    "\n",
+    "print(f\"Average PSNR: {np.mean(cumulative_psnr):.4f}\")\n",
+    "print(f\"Average SSIM: {np.mean(cumulative_ssim):.4f}\")\n",
+    "print(f\"Average Warping Error: {np.mean(cumulative_warping_error):.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9bdff79",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
