Add awb, add ablation codebase

--- a/burst_eval_metrics.ipynb
+++ b/burst_eval_metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "26836d2d",
    "metadata": {},
    "outputs": [],
@@ -31,29 +31,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "38557b73",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "use sdp attention as default\n",
-      "keep default attention mode\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/nobackup/aryan/.conda/envs/sd35/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/nobackup/aryan/.conda/envs/sd35/lib/python3.11/site-packages/gdown/__init__.py:3: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "  import pkg_resources\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import gqvr.model.warp_utils as warp_utils\n",
     "from gqvr.model.core_raft.utils.utils import InputPadder\n",
@@ -159,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "8c0ad45a",
    "metadata": {},
    "outputs": [],
@@ -183,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "397244ed",
    "metadata": {},
    "outputs": [],
@@ -199,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "69f17a1f",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "7bef11d0",
    "metadata": {},
    "outputs": [
@@ -1199,6 +1180,17 @@
      "text": [
       "\n"
      ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
@@ -1242,11 +1234,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "a9bdff79",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "EVAL_DIR = \"/media/agarg54/Extreme SSD/code/gQVR/eval_s1_vs_s2_vs_s3\"\n",
+    "scenes = ['test_00014', 'test_00021', 'test_00031', 'full_tank', 'small_moreguns']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "cda82b18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalize(tens):\n",
+    "    return (tens - tens.min()) / (tens.max() - tens.min())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "87a871ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/5 [00:00<?, ?it/s]/tmp/ipykernel_2160349/3754814929.py:68: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.detach().clone() or sourceTensor.detach().clone().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  warp_img2 = torch.tensor(warp_img2).float().to(device)\n",
+      " 20%|██        | 1/5 [00:03<00:15,  3.98s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_00014 S3: 26.9673/0.8088/0.0044\n",
+      "test_00014 S2: 24.5517/0.7345/0.0043\n",
+      "test_00014 S1: 24.4701/0.7606/0.0042\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 40%|████      | 2/5 [00:07<00:11,  3.94s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_00021 S3: 24.9667/0.9157/0.0034\n",
+      "test_00021 S2: 27.0705/0.9225/0.0046\n",
+      "test_00021 S1: 22.1235/0.9088/0.0044\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 60%|██████    | 3/5 [00:35<00:29, 14.57s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_00031 S3: 29.4883/0.8344/0.0059\n",
+      "test_00031 S2: 28.3928/0.8133/0.0070\n",
+      "test_00031 S1: 12.6355/0.3451/0.0101\n",
+      "full_tank S3: 26.0583/0.8620/0.0059\n",
+      "full_tank S2: 19.2660/0.8164/0.0070\n",
+      "full_tank S1: 19.4205/0.8245/0.0101\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5/5 [00:37<00:00,  7.43s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "small_moreguns S3: 30.6675/0.9262/0.0263\n",
+      "small_moreguns S2: 21.2880/0.9436/0.0267\n",
+      "small_moreguns S1: 21.5380/0.9553/0.0268\n",
+      "-----------------------------------\n",
+      "Ablation: S1 vs S2 vs S3 - On realistic sim bursts (PSNR/SSIM/E*)\n",
+      "-----------------------------------\n",
+      "Average PSNR S1: 20.0375\n",
+      "Average SSIM S1: 0.7589\n",
+      "Average Warping Error S1: 0.009088441077619792\n",
+      "-----------------------------------\n",
+      "Average PSNR S2: 24.1138\n",
+      "Average SSIM S2: 0.8461\n",
+      "Average Warping Error S2: 0.008507703337818385\n",
+      "-----------------------------------\n",
+      "Average PSNR S3: 27.6296\n",
+      "Average SSIM S3: 0.8694\n",
+      "Average Warping Error S3: 0.008005498722195626\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "cumulative_psnr_s3 = []\n",
+    "cumulative_ssim_s3 = []\n",
+    "cumulative_warping_error_s3 = []\n",
+    "\n",
+    "cumulative_psnr_s2 = []\n",
+    "cumulative_ssim_s2 = []\n",
+    "cumulative_warping_error_s2 = []\n",
+    "\n",
+    "cumulative_psnr_s1 = []\n",
+    "cumulative_ssim_s1 = []\n",
+    "cumulative_warping_error_s1 = []\n",
+    "\n",
+    "pbar = tqdm(total=len(scenes))\n",
+    "for scene in scenes:\n",
+    "    test_dir_gt = EVAL_DIR + f\"/{scene}/gt\"\n",
+    "    gt_imgs = os.listdir(test_dir_gt)\n",
+    "    gt_imgs.sort()\n",
+    "    test_dir_out_s3 = EVAL_DIR + f\"/{scene}/out_s3\"\n",
+    "    test_dir_out_s2 = EVAL_DIR + f\"/{scene}/out_s2\"\n",
+    "    test_dir_out_s1 = EVAL_DIR + f\"/{scene}/out_s1\"\n",
+    "\n",
+    "    out_imgs_s3 = os.listdir(test_dir_out_s3)\n",
+    "    out_imgs_s3.sort()\n",
+    "    out_imgs_s2 = os.listdir(test_dir_out_s2)\n",
+    "    out_imgs_s2.sort()\n",
+    "    out_imgs_s1 = os.listdir(test_dir_out_s1)\n",
+    "    out_imgs_s1.sort()\n",
+    "    # test_dir_lq = SD21_burst_results + f\"/{scene}_lq\"\n",
+    "    psnr_list_s3 = []\n",
+    "    ssim_list_s3 = []\n",
+    "    psnr_list_s2 = []\n",
+    "    ssim_list_s2 = []\n",
+    "    psnr_list_s1 = []\n",
+    "    ssim_list_s1 = []\n",
+    "\n",
+    "    if len(out_imgs_s3) > 1:\n",
+    "        warping_error_s3 = compute_video_warping_error(test_dir_out_s3)\n",
+    "        cumulative_warping_error_s3.append(warping_error_s3.detach().cpu().item())\n",
+    "        warping_error_s2 = compute_video_warping_error(test_dir_out_s2)\n",
+    "        cumulative_warping_error_s2.append(warping_error_s2.detach().cpu().item())\n",
+    "        warping_error_s1 = compute_video_warping_error(test_dir_out_s1)\n",
+    "        cumulative_warping_error_s1.append(warping_error_s1.detach().cpu().item())\n",
+    "    else:\n",
+    "        cumulative_warping_error_s1.append(0.)\n",
+    "        cumulative_warping_error_s2.append(0.)\n",
+    "        cumulative_warping_error_s3.append(0.)\n",
+    "\n",
+    "    for i in range(len(gt_imgs)):\n",
+    "        gt_img = Image.open(os.path.join(test_dir_gt, gt_imgs[i])).convert('L').resize((512,512), Image.LANCZOS)\n",
+    "        out_img_s3 = Image.open(os.path.join(test_dir_out_s3, out_imgs_s3[i])).convert('L').resize((512,512), Image.LANCZOS)\n",
+    "        out_img_s2 = Image.open(os.path.join(test_dir_out_s2, out_imgs_s2[i])).convert('L').resize((512,512), Image.LANCZOS)\n",
+    "        out_img_s1 = Image.open(os.path.join(test_dir_out_s1, out_imgs_s1[i])).convert('L').resize((512,512), Image.LANCZOS)\n",
+    "\n",
+    "        gt_img = torch.tensor(np.array(gt_img)).float().unsqueeze(0).to(device) / 255.0\n",
+    "        out_img_s3 = torch.tensor(np.array(out_img_s3)).float().unsqueeze(0).to(device) / 255.0\n",
+    "        out_img_s2 = torch.tensor(np.array(out_img_s2)).float().unsqueeze(0).to(device) / 255.0\n",
+    "        out_img_s1 = torch.tensor(np.array(out_img_s1)).float().unsqueeze(0).to(device) / 255.0\n",
+    "\n",
+    "        gt_img, out_img_s2, out_img_s3, out_img_s1 = normalize(gt_img), normalize(out_img_s2), normalize(out_img_s3), normalize(out_img_s1)\n",
+    "\n",
+    "        psnr_s3, ssim_s3 = compute_full_reference_metrics(gt_img.unsqueeze(0), out_img_s3.unsqueeze(0))\n",
+    "        psnr_s2, ssim_s2 = compute_full_reference_metrics(gt_img.unsqueeze(0), out_img_s2.unsqueeze(0))\n",
+    "        psnr_s1, ssim_s1 = compute_full_reference_metrics(gt_img.unsqueeze(0), out_img_s1.unsqueeze(0))\n",
+    "        # print( psnr, ssim)\n",
+    "        psnr_list_s3.append(psnr_s3)\n",
+    "        ssim_list_s3.append(ssim_s3)\n",
+    "\n",
+    "        psnr_list_s2.append(psnr_s2)\n",
+    "        ssim_list_s2.append(ssim_s2)\n",
+    "\n",
+    "        psnr_list_s1.append(psnr_s1)\n",
+    "        ssim_list_s1.append(ssim_s1)\n",
+    "    # pbar.set_description(f\"Scene: {scene}\")\n",
+    "    print(f\"{scene} S3: {np.mean(psnr_list_s3):.4f}/{np.mean(ssim_list_s3):.4f}/{warping_error_s3:.4f}\")\n",
+    "    print(f\"{scene} S2: {np.mean(psnr_list_s2):.4f}/{np.mean(ssim_list_s2):.4f}/{warping_error_s2:.4f}\")\n",
+    "    print(f\"{scene} S1: {np.mean(psnr_list_s1):.4f}/{np.mean(ssim_list_s1):.4f}/{warping_error_s1:.4f}\")\n",
+    "    cumulative_psnr_s3.append(np.mean(psnr_list_s3))\n",
+    "    cumulative_ssim_s3.append(np.mean(ssim_list_s3))\n",
+    "    cumulative_psnr_s2.append(np.mean(psnr_list_s2))\n",
+    "    cumulative_ssim_s2.append(np.mean(ssim_list_s2))\n",
+    "    cumulative_psnr_s1.append(np.mean(psnr_list_s1))\n",
+    "    cumulative_ssim_s1.append(np.mean(ssim_list_s1))\n",
+    "    pbar.update(1)\n",
+    "pbar.close()\n",
+    "print(\"-----------------------------------\")\n",
+    "print(\"Ablation: S1 vs S2 vs S3 - On realistic sim bursts (PSNR/SSIM/E*)\")\n",
+    "print(\"-----------------------------------\")\n",
+    "print(f\"Average PSNR S1: {np.mean(cumulative_psnr_s1):.4f}\")\n",
+    "print(f\"Average SSIM S1: {np.mean(cumulative_ssim_s1):.4f}\")\n",
+    "print(f\"Average Warping Error S1: {np.mean(cumulative_warping_error_s1)}\")\n",
+    "print(\"-----------------------------------\")\n",
+    "print(f\"Average PSNR S2: {np.mean(cumulative_psnr_s2):.4f}\")\n",
+    "print(f\"Average SSIM S2: {np.mean(cumulative_ssim_s2):.4f}\")\n",
+    "print(f\"Average Warping Error S2: {np.mean(cumulative_warping_error_s2)}\")\n",
+    "print(\"-----------------------------------\")\n",
+    "print(f\"Average PSNR S3: {np.mean(cumulative_psnr_s3):.4f}\")\n",
+    "print(f\"Average SSIM S3: {np.mean(cumulative_ssim_s3):.4f}\")\n",
+    "print(f\"Average Warping Error S3: {np.mean(cumulative_warping_error_s3)}\")\n",
+    "# print(cumulative_warping_error_s2, cumulative_warping_error_s3)\n"
+   ]
   }
  ],
  "metadata": {
