--- a/util_notebooks/post_process_with_bm3d.ipynb
+++ b/util_notebooks/post_process_with_bm3d.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "6e5798c0",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "a17add2c",
    "metadata": {},
    "outputs": [],
@@ -91,8 +91,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7c6941ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noisy_image_path = \"/media/agarg54/Extreme SSD/burst_gt_videos/0112-japanAlley-f250/testBayer_0121_1/bm3d.png\"\n",
+    "output_image_path = \"/media/agarg54/Extreme SSD/burst_gt_videos/0112-japanAlley-f250/testBayer_0121_1/bm3d_sigma_0-2.png\"\n",
+    "\n",
+    "denoised_image = apply_bm3d_denoising(noisy_image_path, sigma_psd=0.2)\n",
+    "io.imsave(output_image_path, (denoised_image * 255.0).astype(np.uint8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17cfdfbc",
    "metadata": {},
    "outputs": [],
    "source": []
